// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test TimeSample view state render initial state snapshot initial 1`] = `
<div>
  <div>
    Current time : 
    -1
     
    <button>
      Get current time
    </button>
  </div>
  <div>
    In :
    false
     
    <button>
      Trigger in
    </button>
  </div>
  <div>
    Ticks1 : 
    0
    , ticks2 : 
    0
     
    <button>
      start ticking
    </button>
  </div>
</div>
`;

exports[`Test TimeSample view state render some state snapshot state1 1`] = `
<div>
  <div>
    Current time : 
    1313
     
    <button>
      Get current time
    </button>
  </div>
  <div>
    In :
    true
     
    <button>
      Trigger in
    </button>
  </div>
  <div>
    Ticks1 : 
    13
    , ticks2 : 
    131313
     
    <button>
      stop ticking
    </button>
  </div>
</div>
`;

exports[`Test TimeSample view state render some state snapshot state2 1`] = `
<div>
  <div>
    Current time : 
    1313
     
    <button>
      Get current time
    </button>
  </div>
  <div>
    In :
    ...
     
    <button
      disabled=""
    >
      Trigger in
    </button>
  </div>
  <div>
    Ticks1 : 
    13
    , ticks2 : 
    131313
     
    <button>
      stop ticking
    </button>
  </div>
</div>
`;
